--- a/frontend/src/app/layout/styles.css
+++ b/frontend/src/app/layout/styles.css
@@ -19,3 +19,7 @@ img:hover {
     90% { transform: translate(1px, 2px) rotate(0deg); }
     100% { transform: translate(1px, -2px) rotate(-1deg); }
   }
+
+  /* body {
+    background: url('../../../public/images/hero1.png');
+  } */
